--- a/ppms_project/profilingApp/templates/activities/Admin Home.html
+++ b/ppms_project/profilingApp/templates/activities/Admin Home.html
@@ -110,93 +110,108 @@
             <hr>
             <!-- MAIN CARDS STARTS HERE -->
             <div class="row">
-                <div class="col-xl-3 col-md-4">
-                    <div class="card shadow-sm bg-white rounded">
-                        <div class="card-header"><i class="fas fa-lg fa-user-check" style="color: green; position:relative; margin-right:10px;"></i>Number of Validated BHW</div>
-                        <div class="card-body">
-                            <h5 class="card-title">{{ validated_count }}</h5>
+                <div class="col-8">
+                    <div class="row">
+                        <div class="col-6">
+                            <div class="row-12 mb-4">
+                                <div class="card shadow-sm bg-white rounded">
+                                    <div class="card-header"><i class="fas fa-lg fa-user-check" style="color: green; position:relative; margin-right:10px;"></i>Number of Validated BHW</div>
+                                    <div class="card-body">
+                                        <h5 class="card-title">{{ validated_count }}</h5>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-6">
+                            <div class="row-12 mb-4">
+                                <div class="card shadow-sm bg-white rounded">
+                                    <div class="card-header"><i class="fas fa-lg fa-user" style="color: rgb(0, 0, 0); position:relative; margin-right:10px;"></i>Number of Parents</div>
+                                    <div class="card-body">
+                                        <h5 class="card-title">{{ parent_count }}</h5>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-xl-3 col-md-4">
-                    <div class="card shadow-sm bg-white rounded">
-                        <div class="card-header"><i class="fas fa-lg fa-user-slash" style="color:orange; position:relative; margin-right:10px;"></i>Number of Non-Validated BHW</div>
-                        <div class="card-body">
-                            <h5 class="card-title">{{ invalidated_count }}</h5>
+                    <div class='row'>
+                        <div class="col-6">
+                            <div class="card shadow-sm bg-white rounded">
+                                <div class="card-header"><i class="fas fa-lg fa-user-slash" style="color:orange; position:relative; margin-right:10px;"></i>Number of Non-Validated BHW</div>
+                                <div class="card-body">
+                                    <h5 class="card-title">{{ invalidated_count }}</h5>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-6">
+                                <div class="card shadow-sm bg-white rounded">
+                                    <div class="card-header"><i class="fas fa-lg fa-baby" style="color: green; position:relative; margin-right:10px;"></i>Number of Preschoolers</div>
+                                    <div class="card-body">
+                                        <h5 class="card-title">{{ preschooler_count }}</h5>
+                                    </div>
+                                </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-xl-3 col-md-4">
-                    <div class="card shadow-sm bg-white rounded">
-                        <div class="card-header"><i class="fas fa-lg fa-user" style="color: rgb(0, 0, 0); position:relative; margin-right:10px;"></i>Number of Parents</div>
-                        <div class="card-body">
-                            <h5 class="card-title">{{ parent_count }}</h5>
-                        </div>
+                    <div class='row'>
+                        <div class="col-xl-12">
+                            <div class="card shadow-sm mb-5 bg-white rounded">
+                                <div class="card-header">
+                                    <h4 style="Padding: 10px 40px 0px 0px;">Barangay Health Workers</h4>
+                                </div>
+                                <div class="card-body p-3 ">
+                                    <div class="table-responsive">
+                                        <table class="table table-hover table-cell-border" id="user_list">
+                                            <thead>
+                                                <tr>
+                                                    <th scope="col" class="text-center">No.</th>
+                                                    <th scope="col" class="text-center">First Name</th>
+                                                    <th scope="col" class="text-center">Middle Name</th>
+                                                    <th scope="col" class="text-center">Last Name</th>
+                                                    <th scope="col" class="text-center">Suffix</th>
+                                                    <th scope="col" class="text-center">Barangay</th>
+                                                    <th scope="col" class="text-center">Status</th>
+                                                </tr>
+                                            </thead>
+                                            <tbody>
+                                                {% for bhw in bhws %}
+                                                <tr>
+                                                    <td class="text-center"></td>
+                                                    <td class="text-center">{{ bhw.user.first_name }}</td>
+                                                    <td class="text-center">{{ bhw.user.middle_name }}</td>
+                                                    <td class="text-center">{{ bhw.user.last_name }}</td>
+                                                    <td class="text-center">{{ bhw.user.suffix_name }}</td>
+                                                    <td class="text-center">{{ bhw.bhw_barangay}}</td>
+                                                    {% if bhw.is_validated is True %}
+                                                        <td class="text-center" style="color: green;">Validated</td>
+                                                    {% else %}
+                                                        <td class="text-center" style="color: orangered;">Unvalidated</td>
+                                                    {% endif %}
+                                                </tr>
+                                                {% endfor %}                                        
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>  
+                        
                     </div>
+                    
                 </div>
-                <div class="col-xl-3 col-md-4">
-                    <div class="card shadow-sm bg-white rounded">
-                        <div class="card-header"><i class="fas fa-lg fa-baby" style="color: green; position:relative; margin-right:10px;"></i>Number of Preschoolers</div>
-                        <div class="card-body">
-                            <h5 class="card-title">{{ preschooler_count }}</h5>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-xl-8">
-                    <div class="card shadow-sm mb-5 bg-white rounded">
-                        <div class="card-header">
-                            <h4 style="Padding: 10px 40px 0px 0px;">Barangay Health Workers</h4>
-                        </div>
-                        <div class="card-body p-3 ">
-                            <div class="table-responsive">
-                                <table class="table table-hover table-cell-border" id="user_list">
-                                    <thead>
-                                        <tr>
-                                            <th scope="col" class="text-center">No.</th>
-                                            <th scope="col" class="text-center">First Name</th>
-                                            <th scope="col" class="text-center">Middle Name</th>
-                                            <th scope="col" class="text-center">Last Name</th>
-                                            <th scope="col" class="text-center">Suffix</th>
-                                            <th scope="col" class="text-center">Barangay</th>
-                                            <th scope="col" class="text-center">Status</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        {% for bhw in bhws %}
-                                        <tr>
-                                            <td class="text-center"></td>
-                                            <td class="text-center">{{ bhw.user.first_name }}</td>
-                                            <td class="text-center">{{ bhw.user.middle_name }}</td>
-                                            <td class="text-center">{{ bhw.user.last_name }}</td>
-                                            <td class="text-center">{{ bhw.user.suffix_name }}</td>
-                                            <td class="text-center">{{ bhw.bhw_barangay}}</td>
-                                            {% if bhw.is_validated is True %}
-                                                <td class="text-center" style="color: green;">Validated</td>
-                                            {% else %}
-                                                <td class="text-center" style="color: orangered;">Unvalidated</td>
-                                            {% endif %}
-                                        </tr>
-                                        {% endfor %}                                        
-                                    </tbody>
-                                </table>
+                <div class="col-4">
+                    <div class="col-xl-12 mb-4">
+                        <div class="card shadow-sm bg-white rounded">  
+                            <div class="card-header">
+                                <i class="fas fa-lg fa-chart-pie" style="color:orange; position:relative; margin-right:10px;"></i>Chart</div>
+                            <div class="card-body">
+                                <canvas class="chart-view" id="myPieChart" width="470%" height="470" style="display: block; box-sizing: border-box; height: 470px; width: 470px;"></canvas> 
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-4">
-                    <div class="card shadow-sm mb-5 bg-white rounded">  
-                        <div class="card-header">
-                            <i class="fas fa-lg fa-chart-pie" style="color:orange; position:relative; margin-right:10px;"></i>Chart</div>
-                        <div class="card-body">
-                            <canvas class="chart-view" id="myPieChart" width="470%" height="470" style="display: block; box-sizing: border-box; height: 470px; width: 470px;"></canvas> 
-                        </div>
-                    </div>
-                </div>
+                
             </div>
         </div>
-  </div>
+    </div>
 
 {% endblock %}
 <!-- Form-->
