--- a/ppms_project/profilingApp/templates/activities/Admin Home.html
+++ b/ppms_project/profilingApp/templates/activities/Admin Home.html
@@ -221,7 +221,7 @@
   <div class="container">
       <div class="row text-center align-items-center">
               <div class="border-top p-4">
-                  <p class="copyright" style=""><small>
+                  <p class="copyright"><small>
                   Copyright ©<script>document.write(new Date().getFullYear());</script> All rights reserved <i class="icon-heart text-danger" aria-hidden="true"></i>
                   </small>
                   </p>
