--- a/ppms_project/profilingApp/templates/activities/Admin Home.html
+++ b/ppms_project/profilingApp/templates/activities/Admin Home.html
@@ -109,7 +109,7 @@
             <h2 style="text-align:left;">Overall Data</h2>
             <hr>
             <!-- MAIN CARDS STARTS HERE -->
-            <div class="row">
+            <div class="row d-flex display-block">
                 <div class="col-8">
                     <div class="row">
                         <div class="col-6">
