--- a/ppms_project/profilingApp/templates/activities/BHW Home.html
+++ b/ppms_project/profilingApp/templates/activities/BHW Home.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="{% static '/CSS/font-awesome/css/all.min.css' %}">
     <link rel="stylesheet" href="{% static '/CSS/css/bootstrap.min.css' %}">
     <script src="{% static '/Javascript/js/jquery.min.js' %}"></script>
+    <script src="{% static '/Javascript/js/Chart.min.js' %}" crossorigin="anonymous"></script>
     <link rel="icon" href="{% static '/Media/Dasmalogo.png' %}" type="image/y-icon">
 
     <title>BHW | PPMS</title>
@@ -192,7 +193,7 @@
     <div class="container">
         <div class="row text-center align-items-center">
                 <div class="border-top p-4">
-                    <p class="copyright" style=""><small>
+                    <p class="copyright"><small>
                     Copyright ©<script>document.write(new Date().getFullYear());</script> All rights reserved <i class="icon-heart text-danger" aria-hidden="true"></i>
                     </small>
                     </p>
