--- a/ppms_project/profilingApp/templates/activities/Parent Home.html
+++ b/ppms_project/profilingApp/templates/activities/Parent Home.html
@@ -7,13 +7,11 @@
 
     <!-- table layout -->
     <link rel="stylesheet" href="{% static '/CSS/DataTables/datatables.min.css' %}">
+    <script src="{% static '/Javascript/js/jquery.min.js' %}"></script>
     <script src="{% static '/Javascript/js/datatables.min.js' %}"></script>
     <script src="{% static '/Javascript/js/datatables.js' %}"></script>
-    <script src="{% static '/Javascript/js/jquery.min.js' %}"></script>
 
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    
     <link rel="icon" href="{% static '/Media/Dasmalogo.png' %}" type="image/x-icon">
     <link rel="stylesheet" href="{% static '/CSS/styles.css' %}">
     <link rel="stylesheet" href="{% static '/CSS/font-awesome/css/all.min.css' %}">
@@ -36,8 +34,7 @@
                 <div class="btn-group my-2 mx-3">
                     <button class="button p-2" id="parentHomeButton" data-bs-toggle="dropdown" data-toggle="tooltip" data-placement="bottom"
                     title="Settings" aria-expanded="false">
-                        <i class="fa fa-2x fa-fw d-block fa-user-cog bi mx-auto"></i>
-                        <span class="badge badge position-absolute top-0 start-100 translate-middle badge rounded-pill bg-light text-danger" style="position:absolute;">2</span>                   
+                        <i class="fa fa-2x fa-fw d-block fa-user-cog bi mx-auto"></i>                 
                     </button>
                     <ul class="dropdown-menu dropdown-menu-end " aria-labelledby="parentHomeButton">
                         <li><a class="dropdown-item" href="{% url 'logout' %}"><i class="fa fa-fw fa-sign-out-alt mx-1"></i>Sign out</a></li>
@@ -67,14 +64,12 @@
             <div class="col">
                 <div class="text-left" >
                     <button style="margin-bottom: 15px; margin-right: 10px; background-color: #188045;" type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addSched"><span class="fa fa-calendar-alt"></span> Enroll Preschooler</button>
-                    <!-- <button style="margin-bottom: 15px;" type="button" class="btn btn-outline-dark" data-toggle="modal" data-target="#deleteApplicant"><span class="fa fa-user-minus"></span> Delete</button> -->
                 </div>
                 <div class="modal fade" id="addSched" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                     <div class="modal-dialog modal-dialog-centered modal-lg">
                         <div class="modal-content">
                             <div class="modal-header" >
                                 <h5 class="modal-title fa fa-user-edit" id="exampleModalLabel">Enroll Preschooler</h5>
-                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                             </div>
                             <div class="modal-body mx-4">
                                 <form method="POST">
@@ -101,7 +96,7 @@
                                     </div>
                                     <div class="modal-footer" style="justify-content:center">
                                         <button type="submit" class="btn btn-primary" style="background-color: #188045;">Enroll</button>
-                                        <button type="button" style="background-color: red; color: white;" class="btn">Cancel</button>
+                                        <button type="button" data-bs-dismiss="modal" style="background-color: red; color: white;" class="btn">Cancel</button>
                                     </div>
                                 </form>
                             </div>
@@ -109,7 +104,7 @@
                     </div>
                 </div>
                 <div class="table-responsive">
-                    <table class="table table-sm" id="preschoolers_table">
+                    <table class="table table-hover table-cell-border" id="preschoolers_table">
                         
                         <thead>
                             <tr>
@@ -208,19 +203,18 @@
     </div>
 </body>
 
-    <script src="{% static '/Javascript/js/bootstrap.bundle.min.js' %}"></script>
-    <script src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
-    <script src="https://cdn.datatables.net/1.12.1/js/dataTables.bootstrap4.min.js"></script>
+<script src="{% static '/Javascript/js/bootstrap.bundle.min.js' %}"></script>
+<script src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
+<script src="https://cdn.datatables.net/1.12.1/js/dataTables.bootstrap4.min.js"></script>
         
     <script>
         var t = $('#preschoolers_table').DataTable({
-            dom: 'Blfrtip',
             info: 'true',
             aoColumnDefs: [{
                 'bSortable': false,
                 'aTargets': ['nosort'],
                 'orderable': false,
-                'targets': [0, 6],
+                'targets': [0,8],
             }],
             order: [[1, 'asc']],
             });
@@ -229,9 +223,5 @@
             t.cells(null, 0, { search: 'applied', order: 'applied' }).every(function (cell) {
                 this.data(i++);
             });}).draw();
-
-        $(function () {
-        $('[data-toggle="tooltip"]').tooltip()})
     </script>
 
-    
