--- a/ppms_project/profilingApp/templates/activities/Parent - Preschooler Profile.html
+++ b/ppms_project/profilingApp/templates/activities/Parent - Preschooler Profile.html
@@ -87,7 +87,7 @@
                                         <p class="mb-0">Full Name</p>
                                     </div>
                                     <div class="col-sm">
-                                        <p class="text-muted mb-0">Johnatan Smith</p>
+                                        <p class="text-muted mb-0">{{ preschooler.first_name }} {{ preschooler.middle_name }} {{ preschooler.last_name }} {{ preschooler.suffix_name }}</p>
                                     </div>
                                 </div>
                                 <hr>
@@ -96,7 +96,7 @@
                                         <p class="mb-0">Date of Birth</p>
                                     </div>
                                     <div class="col-sm">
-                                        <p class="text-muted mb-0">2019-07-29</p>
+                                        <p class="text-muted mb-0">{{ preschooler.birthday }}</p>
                                     </div>
                                 </div>
                                 <hr>
@@ -105,7 +105,7 @@
                                         <p class="mb-0">Gender</p>
                                     </div>
                                     <div class="col-sm">
-                                        <p class="text-muted mb-0">Male</p>
+                                        <p class="text-muted mb-0">{{ preschooler.gender }}</p>
                                     </div>
                                 </div>
                                 <hr>
@@ -114,24 +114,16 @@
                                         <p class="mb-0">Weight:</p>
                                     </div>
                                     <div class="col-sm">
-                                        <p class="text-muted mb-0">0</p>
+                                        <p class="text-muted mb-0">{{ preschooler.weight }} kg</p>
                                     </div>
                                     <div class="col-sm">
                                         <p class="mb-0">Height:</p>
                                     </div>
                                     <div class="col-sm">
-                                        <p class="text-muted mb-0">0</p>
+                                        <p class="text-muted mb-0">{{ preschooler.height }} cm</p>
                                     </div>
                                 </div>
                                 <hr>
-                                <div class="row">
-                                    <div class="col-sm">
-                                        <p class="mb-0">Date Measured</p>
-                                    </div>
-                                    <div class="col-sm">
-                                        <p class="text-muted mb-0">2019-07-29</p>
-                                    </div>
-                                </div>
                             </div>
                         </div>
                     </div>
@@ -150,7 +142,7 @@
                                     <h6 class="card-title">WFA Status</h6>
                                 </div>
                                 <div class="card-body">
-                                    <p class="card-text">0</p>
+                                    <p class="card-text">{{ preschooler.wfa }}</p>
                                 </div>
                             </div>
                             <div class="card">
@@ -158,7 +150,7 @@
                                     <h6 class="card-title">HFA Status</h6>
                                 </div>
                                 <div class="card-body">
-                                    <p class="card-text">0</p>
+                                    <p class="card-text">{{ preschooler.hfa }}</p>
                                 </div>
                             </div>
                             <div class="card">
@@ -166,7 +158,7 @@
                                     <h6 class="card-title">WHFA Status</h6>
                                 </div>
                                 <div class="card-body">
-                                    <p class="card-text">0</p>
+                                    <p class="card-text">{{ preschooler.whfa }}</p>
                                 </div>
                             </div>
                         </div>
