--- a/ppms_project/profilingApp/templates/activities/Parent - Preschooler Profile.html
+++ b/ppms_project/profilingApp/templates/activities/Parent - Preschooler Profile.html
@@ -23,7 +23,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="{% url 'preschooler_profile' %}" class="nav-link" data-toggle="tooltip" data-bs-placement="bottom" data-bs-offset="0,7"
+                            <a href="{% url 'preschooler_dashboard' %}" class="nav-link" data-toggle="tooltip" data-bs-placement="bottom" data-bs-offset="0,7"
                             title="Preschooler Profile">
                             <i class="fa fa-fw fa-id-card " style="font-size: 24px;"></i>
                             </a>
