--- a/ppms_project/profilingApp/templates/activities/Parent Home.html
+++ b/ppms_project/profilingApp/templates/activities/Parent Home.html
@@ -117,6 +117,13 @@
                                         <label id="user-lbl" data-error="wrong" data-success="right">Birthdate:</label>
                                         <input class="form-control" type="date" name="birthday" id="birthday">
                                     </div>
+                                    <div class="md-form">
+                                        <label id="user-lbl" data-error="wrong" data-success="right">Gender:</label>
+                                        <select name="gender" class="form-select" aria-label="Default select example">
+                                            <option value="Male" selected>Male</option>
+                                            <option value="Female">Female</option>
+                                          </select>
+                                    </div>
                                     <div class="modal-footer" style="justify-content:center">
                                         <button type="submit" class="btn btn-primary" style="background-color: #188045;">Enroll</button>
                                         <button type="button" data-bs-dismiss="modal" style="background-color: red; color: white;" class="btn">Cancel</button>
