--- a/ppms_project/profilingApp/templates/activities/Preschooler Profile.html
+++ b/ppms_project/profilingApp/templates/activities/Preschooler Profile.html
@@ -23,7 +23,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="{% url 'preschooler_profile' %}" class="nav-link" data-toggle="tooltip" data-bs-placement="bottom" data-bs-offset="0,7"
+                            <a href="{% url 'preschooler_dashboard' %}" class="nav-link" data-toggle="tooltip" data-bs-placement="bottom" data-bs-offset="0,7"
                             title="Preschooler Profile">
                             <i class="fa fa-fw fa-id-card " style="font-size: 24px;"></i>
                             </a>
@@ -83,7 +83,7 @@
                                         <p class="mb-0">Full Name</p>
                                     </div>
                                     <div class="col-sm">
-                                        <p class="text-muted mb-0">Johnatan Smith</p>
+                                        <p class="text-muted mb-0">{{ preschooler.first_name }} {{ preschooler.middle_name }} {{ preschooler.last_name }} {{ preschooler.suffix_name }}</p>
                                     </div>
                                 </div>
                                 <hr>
@@ -92,7 +92,7 @@
                                         <p class="mb-0">Date of Birth</p>
                                     </div>
                                     <div class="col-sm">
-                                        <p class="text-muted mb-0">2019-07-29</p>
+                                        <p class="text-muted mb-0">{{ preschooler.birthday }}</p>
                                     </div>
                                 </div>
                                 <hr>
@@ -101,7 +101,7 @@
                                         <p class="mb-0">Gender</p>
                                     </div>
                                     <div class="col-sm">
-                                        <p class="text-muted mb-0">Male</p>
+                                        <p class="text-muted mb-0">{{ preschooler.gender }}</p>
                                     </div>
                                 </div>
                                 <hr>
@@ -110,13 +110,13 @@
                                         <p class="mb-0">Weight:</p>
                                     </div>
                                     <div class="col-sm">
-                                        <p class="text-muted mb-0">0</p>
+                                        <p class="text-muted mb-0">{{ preschooler.weight }} kg</p>
                                     </div>
                                     <div class="col-sm">
                                         <p class="mb-0">Height:</p>
                                     </div>
                                     <div class="col-sm">
-                                        <p class="text-muted mb-0">0</p>
+                                        <p class="text-muted mb-0">{{ preschooler.height }} cm</p>
                                     </div>
                                 </div>
                                 <hr>
@@ -125,7 +125,7 @@
                                         <p class="mb-0">Date Measured</p>
                                     </div>
                                     <div class="col-sm">
-                                        <p class="text-muted mb-0">2019-07-29</p>
+                                        <p class="text-muted mb-0">{{ preschooler.date_measured }}</p>
                                     </div>
                                 </div>
                             </div>
@@ -146,7 +146,7 @@
                                     <h6 class="card-title">WFA Status</h6>
                                 </div>
                                 <div class="card-body">
-                                    <p class="card-text">0</p>
+                                    <p class="card-text">{{ preschooler.wfa }}</p>
                                 </div>
                             </div>
                             <div class="card">
@@ -154,7 +154,7 @@
                                     <h6 class="card-title">HFA Status</h6>
                                 </div>
                                 <div class="card-body">
-                                    <p class="card-text">0</p>
+                                    <p class="card-text">{{ preschooler.hfa }}</p>
                                 </div>
                             </div>
                             <div class="card">
@@ -162,7 +162,7 @@
                                     <h6 class="card-title">WHFA Status</h6>
                                 </div>
                                 <div class="card-body">
-                                    <p class="card-text">0</p>
+                                    <p class="card-text">{{ preschooler.whfa }}</p>
                                 </div>
                             </div>
                         </div>
@@ -182,25 +182,21 @@
                                         <div class="modal-body mx-4">
                                             <form method="POST">
                                             <!-- <form method="POST" onsubmit="get_cred($('#type').val());"> -->
-                                                <!-- {% csrf_token %} -->
+                                                {% csrf_token %}
                                                 <div class="md-form">
-                                                    <label id="user-lbl" data-error="wrong" data-success="right">Applicant: </label>
-                                                    <!-- {{ form.examiner }} -->
+                                                    <label id="user-lbl" data-error="wrong" data-success="right">Height (cm): </label>
+                                                    {{ form.height }}
                                                 </div>
                                                 <div class="md-form">
-                                                    <label id="user-lbl" data-error="wrong" data-success="right">Exam Date:</label>
-                                                    <!-- {{ form.exam_date }} -->
+                                                    <label id="user-lbl" data-error="wrong" data-success="right">Weight (kg):</label>
+                                                    {{ form.weight }}
                                                 </div>
                                                 <div class="md-form">
-                                                    <label id="user-lbl" data-error="wrong" data-success="right">Exam Time:</label>
-                                                    <!-- {{ form.exam_time }} -->
-                                                </div>
-                                                <div class="md-form">
-                                                    <label id="user-lbl" data-error="wrong" data-success="right">Room Assignment:</label>
-                                                    <!-- {{ form.room }} -->
+                                                    <label id="user-lbl" data-error="wrong" data-success="right">Date Measured:</label>
+                                                    {{ form.date_measured }}
                                                 </div>
                                                 <div class="modal-footer">
-                                                    <button type="submit" class="btn " style="background-color: #188045; color: white;">Add</button>
+                                                    <button type="submit" class="btn " style="background-color: #188045; color: white;">Save</button>
                                                     <button type="button" class="btn" style="background-color: #EF3A25; color: white;" data-bs-dismiss="modal" aria-label="Close"> Cancel</button>
                                                 </div>
                                             </form>
